--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 body{
-    background-color: rgba(56, 56, 56, 0.1);
-    color: white;
+    background-image: linear-gradient(300deg, #000000, #A9A9A9);
+    /* background-color: rgba(56, 56, 56, 0.1); */
+    color: #fff;
     font-family: poppinsregular;
     max-width: 1300px;
     max-height: 768px;
@@ -8,7 +9,7 @@ body{
     padding: 5px;
 }
 
-.redes, .imagens{
+.redes_sociais, .imagens{
     display: flex;
     flex-direction: row;
     justify-content: end;
@@ -28,14 +29,28 @@ body{
     transform: scale(1.1);
 }
 
-header>.logo{
-    background-color: rgb(3, 3, 3);
+.cabecalho_principal{
+    background-color: rgba(3, 3, 3, 0.6);
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    padding: 10px;
+    border-radius: 3px;
+    height: 130px;
+}
+
+#logo h1, h3{
+    display: flex;
+    justify-content: center;
+    font-size: 25px;
+    text-transform: uppercase;
     color: #B8860B;
-    padding: 5px;
+    line-height: 5px;
+}
+
+#logo, h3{
+    font-size: 16px;
 }
 
 li{
@@ -110,9 +125,4 @@ header>#titulo_caixa1{
     height: 390px;
 }
 
-#title{
-    flex-direction: column;
-    line-height: 10px;
-    text-transform: uppercase;
-    margin: 0px 0px 0px 20px;
-}
+
