--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
+/* Página principal */
 body{
-    background-image: linear-gradient(300deg, #000000, #A9A9A9);
-    /* background-color: rgba(56, 56, 56, 0.1); */
+    background-image: linear-gradient(330deg, #000000, #A9A9A9);
     color: #fff;
     font-family: poppinsregular;
     max-width: 1300px;
@@ -58,7 +58,7 @@ li{
     margin: 20px;
 }
 
-a{
+.menu_principal a{
     color: white;
 }
 
@@ -74,7 +74,7 @@ img#deusa_grega1{
 }
 
 img#deusa_grega1{
-    top: 212px;
+    top: 207px;
     right: 180px;
 }
 
@@ -82,6 +82,7 @@ img#deusa_grega1{
     display: flex;
     flex-direction: row;
     margin: 5px auto;
+    max-height: 390px;
 }
 
 .titulos #titulo1_caixa1, #titulo2_caixa1{
@@ -132,7 +133,6 @@ img#deusa_grega1{
     border-radius: 3px 0px 0px 3px;
 }
 
-
 .caixa2{
     background-color: rgb(128,128,0);
     border-radius: 0px 3px 3px 0px;
@@ -141,3 +141,31 @@ img#deusa_grega1{
 }
 
 
+/* Rodapé */
+.rodape{
+    color: #000000;
+    background-color: rgba(128, 128, 128, 0.2);
+    border-radius: 3px;
+    position: relative;
+    width: 100%;
+    height: 125px;
+}
+
+.informacoes{
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: flex-end;
+    margin: 0;
+}
+
+.producao div{
+    position: absolute;
+    top: 100px;
+    left: 60px;
+}
+
+.producao, a{
+    color: #000000;
+    text-decoration: none;
+}
